# parviocula

./: Cargo.toml  LICENSE  README.md
examples/asgi_only/: Cargo.toml  README.md  demo.py
examples/asgi_only/src/: lib.rs
examples/mixed_routes/: Cargo.toml  README.md  demo.py
examples/mixed_routes/src/: lib.rs
src/: asgi.rs  lib.rs
