[package]
name = "parviocula"
version = "0.0.4"
edition = "2021"
keywords = ["asgi", "axum"]
description = "A simple ASGI server aimed at helping the transition from python ASGI applications to an Axum application"
homepage = "https://github.com/tristan/parviocula"
repository = "https://github.com/tristan/parviocula"
authors = ["Tristan King <parviocula@tristan.rs>"]
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.8.1"
axum-extra = "0.10.0"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = "1.6.0"
percent-encoding = "2.3.1"
pyo3 = { version = "0.21.2" }
pyo3-async-runtimes = { version = "0.21.0", features = ["tokio-runtime"] }
tokio = { version = "1.44.1", features = ["sync"] }
tracing = { version = "0.1.41", optional = true }

[features]
tracing = ["dep:tracing"]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
