[package]
name = "asgi_only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "asgi_only"
crate-type = ["cdylib"]

[dependencies]
axum = "0.5.16"
parviocula = { version = "0.0.3", path = "../..", features = ["extension-module"] }
pyo3 = { version = "0.17.2", features = ["extension-module"] }
