[package]
name = "mixed_routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mixed_routes"
crate-type = ["cdylib"]

[dependencies]
axum = "0.5.16"
parviocula = { version = "0.0.3", path = "../.." }
pyo3 = { version = "0.17.2", features = ["extension-module"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
